fixed overflow bug for scl

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -322,9 +322,10 @@ p {
   background-color: var(--color-accent-1);
   border-radius: var(--border-radius);
   display: inline-block;
-  margin: 0em 0em 0em 0.3em;
+  margin: 0em 0em 0.4em 0.3em;
   padding: 0.2em 0.4em;
   word-wrap: break-word;
+  max-width: calc(var(--cv-right-width) * 0.76);
 }
 
 /*==========
